Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20274

"lctl llog remove" invoking jt_llog_check instead of jt_llog_remove

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      When lctl llog_* commands were refactored into subcommands in LU-18114 (commit fe4b49635d), the new llog_cmdlist[] table in lustre/utils/lctl.c was assembled.

      The "remove" entry had its .pc_func left as jt_llog_check instead of being updated to jt_llog_remove:

       /* lctl.c: llog_cmdlist[] */
        { .pc_name = "check",  .pc_func = jt_llog_check,  ... },
        { .pc_name = "remove", .pc_func = jt_llog_check,  ... },  /* should be jt_llog_remove */ 

      Discovered by code inspect.

            skoyama Sohei Koyama
            skoyama Sohei Koyama
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: