LU-20274 utils: fix wrong func ptr for "lctl llog remove"

Commit fe4b49635d reorganized llog commands into subcommands but
mistakenly assigned jt_llog_check to the "remove" entry instead of
jt_llog_remove, making "lctl llog remove" silently run llog_check.

Fixes: fe4b49635d ("LU-18114 llog: split "lctl llog_*" group into subcommands")
Signed-off-by: Sohei Koyama <skoyama@ddn.com>
Change-Id: I8cb14e3296e50c7271a58e459f892a86d8fbe921
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65989
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Emoly Liu <emoly@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>